test/spec_vectors/conversions/fail/module_3.wat
(module (func (result i32) (i32.trunc_f32_u (i64.const 0))))